More changes made

--- a/donate.html
+++ b/donate.html
@@ -91,7 +91,7 @@
             <img src="./assets/img/rabbitstars@2x.png" alt="" class="sparkle-bunny-img">
         </div>
         <div class="grid-x grid-padding-x">
-            <div class="large-10 medium-10 cell">
+            <div class="large-10 medium-10">
             <ul class="menu ftr-menu padding-0 vertical medium-horizontal">
                 <li><a href="#">About PETA</a></li>
                 <li><a href="/donate.html">Donate Now</a></li>
@@ -105,9 +105,9 @@
                 <div class="grid-x grid-padding-x">
                     <a href=""><img src="./assets/img/peta-logo.png" alt="" class="peta-logo-ftr"></a><a href=""><img src="./assets/img/fb-square.png" alt="" class="fb-logo-ftr"></a><a href=""><img src="./assets/img/twitter-square.png" alt="" class="twitter-logo-ftr"></a>
                     <div class="large-12 peta-ftr-contact">
-                    <p>People for the Ethical Treatment of Animals<br> 
-                    501 Front St., Norfolk, VA 23510 757-622-PETA (7382) | 757-622-0457 (fax)<br> 
-                    PETA is a nonprofit, tax-exempt 501(c)(3) corporation (tax ID number 52-1218336).</p>
+                        <p>People for the Ethical Treatment of Animals<br> 
+                        501 Front St., Norfolk, VA 23510 757-622-PETA (7382) | 757-622-0457 (fax)<br> 
+                        PETA is a nonprofit, tax-exempt 501(c)(3) corporation (tax ID number 52-1218336).</p>
                     </div>
                 </div>
                 </div>
