--- a/index.html
+++ b/index.html
@@ -23,13 +23,32 @@
     <main class="grid-container">
       <h2 class="party-title">An At-Home Party With the Stars!</h2>
       <h3 class="party-subheading">IT’S A VERY SPECIAL PETA 40TH ANNIVERSARY CELEBRATION</h3>
+      <div class="grid-x grid-padding-x">
+        <div class="large-7 peta40-info padding-3">
+          <p>You won’t want to miss this: It’s the first-ever livestreamed PETA party! Be part of it all as we celebrate global victories from PETA’s cutting-edge campaigns. There will be celebrity award presentations, rollicking entertainment, humor, wonderful stories of animal rescues, a virtual gifting suite, real gift bags, and spectacular auction items. Plus, more exciting benefits will be available with each sponsorship level.</p> 
+          <p>You’re a star for helping PETA push the envelope for animals! Now, celebrate 40 years of overcoming resistance to change and forging a future free from speciesism.</p>
+        </div>
+        <div class="large-1"></div>
+        <div class="large-4">
+          <div class="stacked column peta40-btn-list button-group">
+            <a class="button">Expanded</a>
+            <a class="button">Button</a>
+            <a class="button">Group</a>
+          </div>
+        </div>
+        <div class="large-12">
+          <div class="more-info-banner">
+            <p>For more information on sponsorship opportunities or questions about the virtual event, please contact Melanie Wise at 323-210-2245 or Events@petaf.org.</p>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="grid-container">
       <div class="align-center">
           <img src="./assets/img/rabbitstars@2x.png" alt="" class="sparkle-bunny-img">
       </div>
       <div class="grid-x grid-padding-x">
-          <div class="large-10 medium-10 cell">
+          <div class="large-10 medium-10">
           <ul class="menu ftr-menu padding-0 vertical medium-horizontal">
               <li><a href="#">About PETA</a></li>
               <li><a href="/donate.html">Donate Now</a></li>
