Added more changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PETA 40th Anniversary</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
@@ -24,16 +25,17 @@
       <h2 class="party-title">An At-Home Party With the Stars!</h2>
       <h3 class="party-subheading">IT’S A VERY SPECIAL PETA 40TH ANNIVERSARY CELEBRATION</h3>
       <div class="grid-x grid-padding-x">
-        <div class="large-7 peta40-info padding-3">
+        <div class="large-7 peta40-info">
           <p>You won’t want to miss this: It’s the first-ever livestreamed PETA party! Be part of it all as we celebrate global victories from PETA’s cutting-edge campaigns. There will be celebrity award presentations, rollicking entertainment, humor, wonderful stories of animal rescues, a virtual gifting suite, real gift bags, and spectacular auction items. Plus, more exciting benefits will be available with each sponsorship level.</p> 
           <p>You’re a star for helping PETA push the envelope for animals! Now, celebrate 40 years of overcoming resistance to change and forging a future free from speciesism.</p>
         </div>
         <div class="large-1"></div>
         <div class="large-4">
           <div class="stacked column peta40-btn-list button-group">
-            <a class="button">Expanded</a>
-            <a class="button">Button</a>
-            <a class="button">Group</a>
+            <a class="button">Individual Ticket: $40 <span><i class="bi bi-chevron-right"></i></span></a>
+            <a class="button">Friend Sponsor: $400 <span><i class="bi bi-chevron-right"></i></span></a>
+            <a class="button">Guardian Sponsor: $4,000 <span><i class="bi bi-chevron-right"></i></span></a>
+            <a class="button">Hero Sponsor: $40,000 <span><i class="bi bi-chevron-right"></i></span></a>
           </div>
         </div>
         <div class="large-12">
@@ -59,8 +61,8 @@
           </ul>
           <div class="grid-x grid-padding-x">
               <div class="large-12 cell">
-              <div class="grid-x grid-padding-x">
-                  <a href=""><img src="./assets/img/peta-logo.png" alt="" class="peta-logo-ftr"></a><a href=""><img src="./assets/img/fb-square.png" alt="" class="fb-logo-ftr"></a><a href=""><img src="./assets/img/twitter-square.png" alt="" class="twitter-logo-ftr"></a>
+              <div class="grid-x grid-padding-x padding-top-1">
+                  <a href=""><img src="./assets/img/peta-logo.png" alt="" class="peta-logo-ftr" style="margin-left: 2rem;"></a><a href=""><img src="./assets/img/fb-square.png" alt="" class="fb-logo-ftr"></a><a href=""><img src="./assets/img/twitter-square.png" alt="" class="twitter-logo-ftr"></a>
                   <div class="large-12 peta-ftr-contact">
                   <p>People for the Ethical Treatment of Animals<br> 
                   501 Front St., Norfolk, VA 23510 757-622-PETA (7382) | 757-622-0457 (fax)<br> 
